# BinSight

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docker/linux-observer/: Dockerfile
docs/: ARCHITECTURE.md  DEVELOPMENT.md  LLM_RAG.md  RELEASE.md  REPORT_SCHEMA.md  RISK_MODEL.md  SKILL_MCP_PLAN.md  WINDOWS.md  WINDOWS_ETW_OBSERVATION.md
docs/zh-CN/: ARCHITECTURE.md  DEVELOPMENT.md  LLM_RAG.md  RELEASE.md  REPORT_SCHEMA.md  RISK_MODEL.md  SKILL_MCP_PLAN.md  WINDOWS.md  WINDOWS_ETW_OBSERVATION.md
include/binsight/: binary_analyzer.hpp  config.hpp  dynamic_observer.hpp  llm_client.hpp  local_rag.hpp  process_runner.hpp  report_writer.hpp  risk_rule_engine.hpp  scan_pipeline.hpp  string_scanner.hpp  types.hpp  utils.hpp
knowledge/: anti-debug.md  command-execution.md  crypto-packing-obfuscation.md  elf-hardening.md  network-behavior.md  pe-imports.md  process-injection.md
packaging/windows/: README-FIRST.en.txt  README-FIRST.zh-CN.txt  打开 BinSight 图形界面.cmd
rules/: default-rules.yaml
src/: binary_analyzer.cpp  config.cpp  dynamic_observer.cpp  llm_client.cpp  local_rag.cpp  main.cpp  process_runner.cpp  report_writer.cpp  risk_rule_engine.cpp  scan_pipeline.cpp  string_scanner.cpp  types.cpp  utils.cpp
src/gui/: main.cpp
tests/: unit_tests.cpp
